<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/ic_backgroundbackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <include
                layout="@layout/large_layout_listitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_button_settings"
                    android:gravity="center"
                    android:text="@string/log"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_button"
                    android:gravity="center"
                    android:minWidth="50dip"
                    android:text="\?"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/title_alternative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/alternatives"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/image_alternative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_textbubble_white_clear"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/alternative"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title_disposal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:text="@string/disposal_methods"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/image_disposal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/custom_textbubble_white_clear"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/disposal"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>