<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Options">

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_textbubble"
        android:layout_margin="40dp"
        android:fontFamily="@font/oswald"
        android:padding="20dp"
        android:text="@string/temp"
        android:textColor="@color/colorText"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btnItemSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:height="70dp"
        android:background="@drawable/custom_button"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/itemSearch"
        android:textColor="@color/default_bubble_text_color"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnEnvironment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="50dp"
        android:height="70dp"
        android:background="@drawable/custom_button"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/myEnvironment"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_navigation" />

</LinearLayout>